--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 dockerRepositoryName=nl-portal-backend-libraries
 dockerHostname=723485878263.dkr.ecr.eu-central-1.amazonaws.com
 dockerRegion=eu-central-1
+
+kotlinVersion=1.7.21
+springBootVersion=2.7.5
+springDependencyManagementVersion=1.1.0
+benManesVersionsVersion=0.44.0
+ktlintVersion=11.0.0
+spotlessVersion=6.11.0
+gradleDockerComposeVersion=0.16.11
