--- a/app/portal/src/main/resources/config/application.yml
+++ b/app/portal/src/main/resources/config/application.yml
@@ -86,6 +86,12 @@ graphql:
         enabled: true
     packages:
         - "com.ritense.portal"
+
+portal:
+    config:
+        erfpachtdossier:
+            url: "http://localhost:8091"
+
 logging:
     level:
         org:
