feature 63997 - Made adjustments so the data is now correcly retrieved from the endpoint that will return erfpachtdossiers
Bestemmingen doesn't work quite right yet so that will be fixed in a future update

--- a/app/gzac/src/main/resources/config/application-dev.yml
+++ b/app/gzac/src/main/resources/config/application-dev.yml
@@ -8,6 +8,11 @@ spring:
         port: ${DATABASE_PORT:54330}
         name: gzac-portal-db
 
+portal:
+    config:
+        erfpachtdossier:
+            url: "http://localhost:8192"
+
 logging:
     level:
         reactor.netty.http.client.HttpClient: DEBUG
