--- a/app/gzac/src/main/resources/config/application.yml
+++ b/app/gzac/src/main/resources/config/application.yml
@@ -38,6 +38,8 @@ spring:
                     provider_disables_autocommit: true
 
 graphql:
+    introspection:
+        enabled: true
     packages:
         - "com.ritense.portal"
 logging:
