--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ benManesVersionsVersion=0.44.0
 ktlintVersion=11.0.0
 spotlessVersion=6.11.0
 gradleDockerComposeVersion=0.16.11
+dokkaVersion=1.7.20
