--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,4 @@ spotlessVersion=6.11.0
 gradleDockerComposeVersion=0.16.11
 dokkaVersion=1.7.20
 
-org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=2048m
+org.gradle.jvmargs=-Xmx6g "-XX:MaxMetaspaceSize=2048m"
