Added default profile and added database configuration based on nl-portal-docker-compose.

--- a/app/gzac/src/main/resources/config/application.yml
+++ b/app/gzac/src/main/resources/config/application.yml
@@ -2,6 +2,8 @@ server:
     port: 8081
 
 spring:
+    profiles:
+        default: dev
     application:
         name: nl-portal-backend-libraries
     security:
