--- a/app/gzac/src/main/resources/config/application-dev.yml
+++ b/app/gzac/src/main/resources/config/application-dev.yml
@@ -1,12 +1,9 @@
 spring:
     datasource:
-        url: jdbc:postgresql://${spring.datasource.hostname}:${spring.datasource.port}/${spring.datasource.database-name}
-        username: ${DATABASE_USERNAME:valtimo}
-        password: ${DATABASE_PASSWORD:valtimo}
-        hostname: ${DATABASE_HOSTNAME:localhost}
-        database-name: ${DATABASE_NAME:gzac-portal-db}
-        port: ${DATABASE_PORT:54330}
-        name: gzac-portal-db
+        url: jdbc:postgresql://localhost:5432/nl-portal
+        username: nlportal
+        password: password
+        name: nl-portal-database
 
 logging:
     level:
