--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,11 +5,11 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Build validation with Gradle
 
 on:
     push:
-        branches: [ "development", "feature/**" ]
+        branches: [ "development" ]
     pull_request:
         branches: [ "development" ]
 
@@ -28,7 +28,7 @@ jobs:
               with:
                   java-version: '17'
                   distribution: 'temurin'
-            - name: Run tests with Gradle
+            - name: Build with Gradle
               uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
               with:
                   arguments: build
