feat: 61811 zgw taak module
* separates zgw taak related code from the `gzac:objects-api` module into it's own module.

--- a/zgw/taak/src/test/resources/config/application.yml
+++ b/zgw/taak/src/test/resources/config/application.yml
@@ -10,3 +10,5 @@ valtimo:
     objectsapi:
         url: http://localhost:8010
         token: 0000000000000000000000000000000000000000
+        taak:
+            typeUrl: "http://localhost:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb35"
