--- a/app/gzac/src/main/resources/config/application.yml
+++ b/app/gzac/src/main/resources/config/application.yml
@@ -47,6 +47,11 @@ logging:
         org.springframework.amqp: DEBUG
 
 valtimo:
+    zgw:
+        zakenapi:
+            url: http://localhost:8001
+            clientId: valtimo_client
+            secret: e09b8bc5-5831-4618-ab28-41411304309d
     openzaak:
         url: http://localhost:8001
         clientId: valtimo_client
