--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -8,6 +8,14 @@ logging:
 
 valtimo:
     zgw:
+        catalogiapi:
+            url: #filled in test
+            clientId: valtimo_client
+            secret: e09b8bc5-5831-4618-ab28-41411304309d
+        documentenapi:
+            url: #filled in test
+            clientId: valtimo_client
+            secret: e09b8bc5-5831-4618-ab28-41411304309d
         zakenapi:
             url: #filled in test
             clientId: valtimo_client
