Removed deprecated objectsapitask module.

--- a/app/gzac/src/main/resources/config/application-dev.yml
+++ b/app/gzac/src/main/resources/config/application-dev.yml
@@ -1,6 +1,9 @@
+server:
+    port: 8090
+
 spring:
     datasource:
-        url: jdbc:postgresql://localhost:5432/nl-portal
+        url: jdbc:postgresql://localhost:54321/nl-portal
         username: nlportal
         password: password
         name: nl-portal-database
