--- a/app/gzac/src/main/resources/config/application.yml
+++ b/app/gzac/src/main/resources/config/application.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8081
+    port: 8080
 
 spring:
     profiles:
@@ -10,7 +10,7 @@ spring:
         oauth2:
             resourceserver:
                 jwt:
-                    issuer-uri: http://localhost:8093/auth/realms/master
+                    issuer-uri: http://localhost:8082/auth/realms/master
     liquibase:
         enabled: false
     datasource:
@@ -42,6 +42,7 @@ spring:
 graphql:
     packages:
         - "com.ritense.portal"
+        - "nl.nlportal"
 logging:
     level:
         org.springframework.amqp: DEBUG
