--- a/app/gzac/src/main/resources/config/application.yml
+++ b/app/gzac/src/main/resources/config/application.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8080
+    port: 8090
 
 spring:
     profiles:
@@ -16,6 +16,10 @@ spring:
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://localhost:54321/nl-portal
+        username: nlportal
+        password: password
+        name: nl-portal-database
         hikari:
             auto-commit: false
             poolName: "gzac-portal-pool"
