Renamed valtimo prefix to nl-portal.zgw.

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -67,9 +67,6 @@ valtimo:
             url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
-        taak:
-            taakobject:
-                typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
     openklant:
         url: http://localhost:8006
         clientId: valtimo_client
@@ -97,3 +94,9 @@ valtimo:
                 allowedHeaders: "*"
                 allowedOrigins: "*"
                 allowedMethods: "*"
+
+nl-portal:
+    zgw:
+        taak:
+            taakobject:
+                typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
