--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Build bootJar
 
 on:
   push:
@@ -36,4 +36,4 @@ jobs:
         tag: ${{ env.GITHUB_REF_NAME }}
         artifacts: "build/libs/*.jar"
         bodyFile: "body.log"
-        token: ${{ secrets.GITHUB_TOKEN }
+        token: ${{ secrets.GITHUB_TOKEN }}
