--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Build bootJar
+name: Deploy packages
 
 on:
   workflow_dispatch:
@@ -32,7 +32,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
           gradle-version: 7.6
-          arguments: clean build
+          arguments: build
     - name: Gradle publish
       uses: gradle/gradle-build-action@v2
       with:
