--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,3 +30,8 @@ jobs:
               uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
               with:
                   arguments: build
+            - name: Upload artifact
+              uses: actions/upload-artifact@v1
+              with:
+                name: surefire-reports
+                path: /home/runner/work/nl-portal-backend-libraries/nl-portal-backend-libraries/klantcontactmomenten/build/reports/tests/test/index.html
