--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -8,12 +8,19 @@ logging:
 
 valtimo:
     zgw:
-        documentenapi:
-            url: #filled in test
-            clientId: valtimo_client
-            secret: e09b8bc5-5831-4618-ab28-41411304309d
-            rsin: "051845623"
-            documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
-            virusscan:
-                enabled: false
-
+        documentenapis:
+            documentapis:
+                -
+                    default: true
+                    url: #filled in test
+                    clientId: valtimo_client
+                    secret: e09b8bc5-5831-4618-ab28-41411304309d
+                    rsin: "051845623"
+                    documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
+                -
+                    default: false
+                    url: #filled in test
+                    clientId: valtimo_client
+                    secret: e09b8bc5-5831-4618-ab28-111111111111
+                    rsin: "111222333"
+                    documentTypeUrl: http://localhost:8801/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
