--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -10,15 +10,13 @@ valtimo:
     zgw:
         documentenapis:
             documentapis:
-                -
-                    default: true
-                    url: #filled in test
+                openzaak:
+                    url: https://localhost:8001/
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-41411304309d
                     rsin: "051845623"
                     documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
-                -
-                    default: false
-                    url: #filled in test
+                example:
+                    url: https://example.org/
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-111111111111
