--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -12,10 +12,14 @@ valtimo:
             url: #filled in test
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
-        documentenapi:
-            url: #filled in test
-            clientId: valtimo_client
-            secret: e09b8bc5-5831-4618-ab28-41411304309d
+        documentenapis:
+            documentapis:
+                openzaak:
+                    url: #filled in test
+                    clientId: valtimo_client
+                    secret: e09b8bc5-5831-4618-ab28-41411304309d
+                    rsin: "051845623"
+                    documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
         zakenapi:
             url: #filled in test
             clientId: valtimo_client
