cleaned up code based on pullrequeest feedback

--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -9,7 +9,7 @@ logging:
 valtimo:
     zgw:
         documentenapis:
-            documentapis:
+            configurations:
                 openzaak:
                     url: https://localhost:8001/
                     clientId: valtimo_client
