--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -11,12 +11,12 @@ valtimo:
         documentenapis:
             configurations:
                 openzaak:
-                    url: https://localhost:8001/
+                    url: https://localhost:8001/documenten/api/v1
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-41411304309d
                     rsin: "051845623"
                     documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/00000000-0000-0000-000000000000
                 example:
-                    url: https://example.org/
+                    url: https://example.org/documenten/api/v1
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-111111111111
