--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,13 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Build validation with Gradle
+name: Build release
+
 
 on:
-    on:
-        workflow_dispatch:
-            branches:
-                - rc/*
+    workflow_dispatch:
+        branches:
+            - rc/*
 
 permissions:
     contents: read
