--- a/.github/workflows/packageclean.yml
+++ b/.github/workflows/packageclean.yml
@@ -11,6 +11,7 @@ on:
     schedule:
         # * is a special character in YAML so you have to quote this string
         - cron:  '0 0 * * *'
+    workflow_dispatch:
 
 permissions:
   packages: write
