--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,7 @@ jobs:
               id: create_release
               uses: actions/create-release@latest
               env:
-                  USER: ${{ secrets.USER }}
-                  TOKEN: ${{ secrets.TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   tag_name: ${{ github.ref }}
                   release_name: Release ${{ github.ref }}
