--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,16 @@ jobs:
               uses: gradle/gradle-build-action@0bfe00a136db5e61ba3416b372542a65863a9fee
               with:
                   arguments: build
+            - name: Gradle publish
+              uses: gradle/gradle-build-action@v2
+              with:
+                  gradle-version: 7.6.3
+                  arguments: publish
+              env:
+                  #USER: ${{ secrets.GITHUB_TOKEN }}
+                  #TOKEN: ${{ secrets.GITHUB_ACTOR }}
+                  USER: ${{ secrets.USER }}
+                  TOKEN: ${{ secrets.TOKEN }}
             - name: Create a Release
               uses: elgohr/Github-Release-Action@v5
               env:
