added a default documentApi and added the old document upload endpoint, so we are backwards compatible

--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -9,6 +9,7 @@ logging:
 valtimo:
     zgw:
         documentenapis:
+            default-document-api: openzaak
             configurations:
                 openzaak:
                     url: https://localhost:8001/documenten/api/v1
