--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -64,6 +64,7 @@ valtimo:
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
         documentenapis:
+            default-document-api: openzaak
             configurations:
                 openzaak:
                     url: http://localhost:8001/documenten/api/v1
