--- a/zgw/zaken-api/src/test/resources/config/application.yml
+++ b/zgw/zaken-api/src/test/resources/config/application.yml
@@ -13,6 +13,7 @@ valtimo:
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
         documentenapis:
+            default-document-api: openzaak
             configurations:
                 openzaak:
                     url: #filled in test
