--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -65,6 +65,10 @@ valtimo:
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
         documentenapis:
+            #virusscan:
+                #clamav:
+                    #hostName: localhost
+                    #enabled: true
             default-document-api: openzaak
             configurations:
                 openzaak:
