--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -75,6 +75,8 @@ valtimo:
                     url: http://localhost:8001/documenten/api/v1
                     clientId: valtimo_client
                     secret: e09b8bc5-5831-4618-ab28-41411304309d
+                    rsin: "051845623"
+                    documentTypeUrl: http://localhost:8001/catalogi/api/v1/informatieobjecttypen/efc332f2-be3b-4bad-9e3c-49a6219c92ad
                 dummydoc:
                     url: http://localhost:8002/documenten/api/v1
                     clientId: docdoc
