moved properties from valtimo to nl-portal

--- a/klant/src/test/resources/config/application.yml
+++ b/klant/src/test/resources/config/application.yml
@@ -2,7 +2,7 @@ graphql:
     packages:
         - "com.ritense.portal"
 
-valtimo:
+nl-portal:
     openklant:
         url: #filled in test
         clientId: valtimo_client
