--- a/klantcontactmomenten/src/test/resources/config/application.yml
+++ b/klantcontactmomenten/src/test/resources/config/application.yml
@@ -3,7 +3,7 @@ graphql:
         - "com.ritense.portal"
         - "nl.nlportal"
 
-valtimo:
+nl-portal:
     openklant:
         url: #filled in test
         clientId: valtimo_client
