--- a/zgw/catalogi-api/src/test/resources/config/application.yml
+++ b/zgw/catalogi-api/src/test/resources/config/application.yml
@@ -6,7 +6,7 @@ logging:
     level:
         reactor.netty.http.client.HttpClient: DEBUG
 
-valtimo:
+nl-portal:
     zgw:
         catalogiapi:
             url: #filled in test
