--- a/zgw/documenten-api/src/test/resources/config/application.yml
+++ b/zgw/documenten-api/src/test/resources/config/application.yml
@@ -6,7 +6,7 @@ logging:
     level:
         reactor.netty.http.client.HttpClient: DEBUG
 
-valtimo:
+nl-portal:
     zgw:
         documentenapis:
             default-document-api: openzaak
