--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -52,7 +52,7 @@ logging:
     level:
         org.springframework.amqp: DEBUG
 
-valtimo:
+nl-portal:
     zgw:
         catalogiapi:
             url: http://localhost:8001
@@ -64,6 +64,9 @@ valtimo:
             url: http://localhost:8001
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
+        taak:
+            taakobject:
+                typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
         documentenapis:
             #virusscan:
                 #clamav:
@@ -102,15 +105,10 @@ valtimo:
     #                certChain: ${VALTIMO_HAALCENTRAAL_SSL_KEY_CERT_CHAIN}
     #                keyPassword: ${VALTIMO_HAALCENTRAAL_SSL_KEY_KEY_PASSWORD}
     #            trustedCertificate: ${VALTIMO_HAALCENTRAAL_SSL_TRUSTED_CERTIFICATE}
-    cors:
+    security:
+      cors:
         -   path: "/**"
             config:
                 allowedHeaders: "*"
                 allowedOrigins: "*"
                 allowedMethods: "*"
-
-nl-portal:
-    zgw:
-        taak:
-            taakobject:
-                typeUrl: "http://host.docker.internal:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb34"
