--- a/haalcentraal/haalcentraal-hr/src/test/resources/config/application.yml
+++ b/haalcentraal/haalcentraal-hr/src/test/resources/config/application.yml
@@ -2,7 +2,7 @@ graphql:
     packages:
         - "com.ritense.portal"
 
-valtimo:
+nl-portal:
     haalcentraal:
         url: #filled in test
         apiKey: "some-api-key"
