--- a/product/src/test/resources/config/application.yml
+++ b/product/src/test/resources/config/application.yml
@@ -2,7 +2,7 @@ graphql:
     packages:
         - "com.ritense.portal"
 
-valtimo:
+nl-portal:
     openformulieren:
         url: #filled in test
         token: "some-test-token"
