--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -5,7 +5,7 @@ management:
     endpoints:
         web:
             exposure:
-                include: "health"
+                include: "*"
         enabled-by-default: false
 
 spring:
