upgrade to spring boot 3.2.0 and fixed tests

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -36,7 +36,7 @@ spring:
             auto-commit: false
             poolName: "gzac-portal-pool"
     jpa:
-        database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+        database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
         show_sql: true
         open-in-view: false
