--- a/task/src/test/resources/config/application.yml
+++ b/task/src/test/resources/config/application.yml
@@ -13,7 +13,7 @@ spring:
         hikari:
             auto-commit: false
     jpa:
-        database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+        database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
         show_sql: true
         open-in-view: false
