--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
                   java-version: '21'
                   distribution: 'temurin'
             - name: Build with Gradle
-              uses: gradle/gradle-build-action@f95e9c74599bc49122b76ecfe1306f0034f87266
+              uses: gradle/gradle-build-action@v2
               with:
                   arguments: build
             - name: Gradle publish
