--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,16 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Build release
+name: Deploy release
 
 
 on:
-    push:
-        tags:
-            - '*'
+  workflow_dispatch:
+
+  push:
+    branches:  
+     - "!**"
+     - "release/**"
 
 permissions:
     contents: read
@@ -38,10 +41,10 @@ jobs:
                   gradle-version: 8.5
                   arguments: publish
               env:
-                  #USER: ${{ secrets.GITHUB_TOKEN }}
-                  #TOKEN: ${{ secrets.GITHUB_ACTOR }}
                   USER: ${{ secrets.USER }}
                   TOKEN: ${{ secrets.TOKEN }}
+                  MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+                  MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
             - name: Create a Release
               uses: elgohr/Github-Release-Action@20231116201936
               env:
