--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
               uses: gradle/gradle-build-action@v2
               with:
                   gradle-version: 8.5
-                  arguments: publish
+                  arguments: publishDefaultPublicationToSonatypeRepository
               env:
                   USER: ${{ secrets.USER }}
                   TOKEN: ${{ secrets.TOKEN }}
