--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -15,28 +15,8 @@
  */
 
 plugins {
-    kotlin("jvm")
+    id 'maven-publish'
 }
-
-val isLib = true
-
-dependencies {
-
-    implementation(ApiDependencies.kotlinLogging)
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.boot:spring-boot-starter-webflux")
-
-    testImplementation("org.jetbrains.kotlin:kotlin-test")
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-}
-
-val jar: Jar by tasks
-val bootJar: org.springframework.boot.gradle.tasks.bundling.BootJar by tasks
-bootJar.enabled = false
-jar.enabled = true
 
 project.tasks.findByName("publishDefaultPublicationToSonatypeRepository")?.enabled = false
 project.tasks.findByName("publishDefaultPublicationToMavenLocal")?.enabled = false
-
-apply(from = "gradle/publishing.gradle.kts")
