--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,6 +8,9 @@
 name: Build validation with Gradle
 
 on:
+    push:
+        branches:  
+        - "**"
     pull_request:
         branches: [ "development" ]
 
