--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
             - name: Build with Gradle
               uses: gradle/gradle-build-action@v2
               with:
+                  gradle-version: 8.5
                   arguments: build
             - name: Gradle publish
               uses: gradle/gradle-build-action@v2
