--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ dokkaVersion=1.9.10
 
 org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=2048m
 org.gradle.workers.max=10
-version=1.3.1-beta8
+version=1.3.2-SNAPSHOT
