--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
                     USER: ${{ secrets.USER }}
                     TOKEN: ${{ secrets.TOKEN }}
             - name: Create a Release
-              if: startsWith(github.ref_name, release/**')
+              if: startsWith(github.ref_name, 'release/')
               uses: elgohr/Github-Release-Action@20231116201936
               env:
                   GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
