--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
             - name: Build with Gradle
               uses: gradle/gradle-build-action@v3
               with:
+                  gradle-version: 8.5
                   arguments: build
             - name: Gradle publish Release toStaging
               if: startsWith(github.ref_name, 'release/')
