--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
                   SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
 
             -   name: Gradle publish Snapshot to OSS
-                if: github.ref_name == 'develop'
+                if: github.ref_name == '/refs/head/develop'
                 uses: gradle/gradle-build-action@v3
                 with:
                     gradle-version: 8.5
@@ -60,7 +60,7 @@ jobs:
                     SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
                     SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
             -   name: Gradle publish Snapshot to Github
-                if: github.ref_name == 'develop'
+                if: github.ref_name == '/refs/head/develop'
                 uses: gradle/gradle-build-action@v3
                 with:
                     gradle-version: 8.5
