token exchange poging 2

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -55,6 +55,13 @@ spring:
                 connection:
                     provider_disables_autocommit: true
 
+keycloak:
+    auth-server-url: https://http://localhost:8082/auth
+    realm: Master
+    resource: Nl-portal-m2m
+    credentials:
+        secret: EQ3mXUieZKTm4Tgl8GV4LU2lNfwMY4Ww
+
 graphql:
     packages:
         - "nl.nlportal"
