fixed all test exept the convert ones to be able to create build for den haag

--- a/graphql/src/test/resources/config/application.yml
+++ b/graphql/src/test/resources/config/application.yml
@@ -1,3 +1,10 @@
 graphql:
     packages:
         - "nl.nlportal"
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
