--- a/zgw/objectenapi/src/test/resources/config/application.yml
+++ b/zgw/objectenapi/src/test/resources/config/application.yml
@@ -10,3 +10,10 @@ nl-portal:
     objectsapi:
         url: http://localhost:8010
         token: 0000000000000000000000000000000000000000
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
