--- a/case/src/test/resources/config/application.yml
+++ b/case/src/test/resources/config/application.yml
@@ -12,6 +12,11 @@ spring:
         password: test
         hikari:
             auto-commit: false
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         database: postgresql
