--- a/form/src/test/resources/config/application.yml
+++ b/form/src/test/resources/config/application.yml
@@ -32,9 +32,18 @@ spring:
                 connection:
                     provider_disables_autocommit: true
     security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
         user:
             name: test
             password: test
+
+keycloak:
+    resource: resource
+    credentials:
+        secret: yoursecret
 
 graphql:
     packages:
