--- a/haalcentraal/haalcentraal-brp/src/test/resources/config/application.yml
+++ b/haalcentraal/haalcentraal-brp/src/test/resources/config/application.yml
@@ -6,3 +6,10 @@ nl-portal:
     haalcentraal:
         url: #filled in test
         apiKey: "some-api-key"
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
