--- a/zgw/catalogi-api/src/test/resources/config/application.yml
+++ b/zgw/catalogi-api/src/test/resources/config/application.yml
@@ -12,3 +12,10 @@ nl-portal:
             url: #filled in test
             clientId: valtimo_client
             secret: e09b8bc5-5831-4618-ab28-41411304309d
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
