--- a/zgw/idtoken-authentication/src/test/resources/config/application.yml
+++ b/zgw/idtoken-authentication/src/test/resources/config/application.yml
@@ -1,3 +1,10 @@
 logging:
     level:
         reactor.netty.http.client.HttpClient: DEBUG
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
