--- a/zgw/taak/src/test/resources/config/application.yml
+++ b/zgw/taak/src/test/resources/config/application.yml
@@ -12,3 +12,10 @@ nl-portal:
         token: 0000000000000000000000000000000000000000
         taak:
             typeUrl: "http://localhost:8011/api/v1/objecttypes/3e852115-277a-4570-873a-9a64be3aeb35"
+
+spring:
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri: http://localhost:8082/auth/realms/nlportal
