--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -31,3 +31,15 @@ jobs:
                 env:
                     USER: ${{ secrets.USER }}
                     TOKEN: ${{ secrets.TOKEN }}
+
+            -   name: Gradle publish Snapshot to OSS
+                if: github.ref_name == 'development'
+                uses: gradle/gradle-build-action@v3
+                with:
+                    gradle-version: 8.5
+                    arguments: publishDefaultPublicationToSonatypeSnapshotRepository
+                env:
+                    OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+                    OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+                    SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+                    SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
