moved audience also to the keycloak audience, so it configurable

--- a/app/src/main/resources/config/application.yml
+++ b/app/src/main/resources/config/application.yml
@@ -57,6 +57,7 @@ spring:
 
 keycloak:
     resource: gzac-portal-m2m
+    audience: gzac-portal-token-exchange
     credentials:
         secret: yoursecret
 
